# zinc

./: .gitmodules  CMakeLists.txt  CMakePresets.json  main.cpp
.github/workflows/: cmake-tests.yml
core/: core.hpp
core/async/: task.cpp  task.hpp  thread_pool.cpp  thread_pool.hpp  thread_pool_context.hpp
core/async/awaiters/: duration.hpp
core/node/: node.hpp  node_manager.hpp
core/utility/: meta.hpp
example/echo/: CMakeLists.txt  main.cpp
include/core/: defaults.hpp
include/core/async/: task.hpp  thread_pool.hpp  thread_pool_context.hpp
include/core/async/awaiters/: duration.hpp
include/core/node/: node.hpp  node_manager.hpp
include/nodes/epoll_node/: epoll_node.hpp
nodes/epoll_node/: epoll_node.hpp
src/core/async/: task.cpp  thread_pool.cpp
src/core/node/: node_manager.cpp
test/core/: CMakeLists.txt
test/core/async/: CMakeLists.txt  task.cpp
